test/invalid-syntax/60294_bad_identifier/bad_identifier.mag
-- Author: 60294, Pedro Rosa
fun 1add (x): Int -> Int = x + 1